--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.84.1",
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
-    "react-router": "^7.7.1",
-    "tailwindcss": "^4.1.11"
+    "react-router": "^7.8.0",
+    "react-secure-storage": "^1.3.2",
+    "tailwindcss": "^4.1.11",
+    "zod": "^4.0.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
